--- a/next_frontend/src/styles/globals.css
+++ b/next_frontend/src/styles/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap");
 
@@ -9,13 +7,10 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Manrope", sans-serif;
+  height: 100%;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
